Updated images and some biblio items

--- a/slides.tex
+++ b/slides.tex
@@ -336,7 +336,20 @@
 }
 \section{Proposed Solution}
 \subsection{Block Diagrams}
-\frame{}
+\frame{
+	\frametitle{Typical System for one source of data}	
+	\begin{figure}
+		\includegraphics[scale=0.4]{fig/TypAppSys2.png}
+		\caption{Typical Application or System Data Flow}
+	\end{figure}
+}
+\frame{
+	\frametitle{Multisensor Data System}	
+	\begin{figure}
+		\includegraphics[scale=0.3]{fig/TypApp2.png}
+		\caption{Typical Application or System Data Flow}
+	\end{figure}
+}
 \subsubsection{Video Processing}
 \frame{}
 \subsubsection{Laser Processing}
@@ -719,6 +732,9 @@
 	\frametitle{References}
 	\footnotesize{	
 	\begin{itemize}[leftmargin=.6in]
+		\item [Elmenreich07] Elmenreich, W. \textbf{A Review on System Architectures for Sensor Fusion Applications}. \textit{Software Technologies for Embedded and Ubiquitous Systems
+Lecture Notes in Computer Science Volume 4761 (pp. 547–559)}. 2007.
+		\item [Esteban12] Esteban, J. et al, \textbf{A Review of data fusion models and architectures: towards 	engineering guidelines}. \textit{Neural Computing and Applications, 14(4),(pp. 273–281)}. 2012.
 		\item [Goldhammer12] Goldhammer, M. et al, \textbf{Cooperative multi sensor network for traffic safety applications at intersections}. \textit{2012 15th International IEEE Conference on Intelligent Transportation Systems (pp. 1178–1183)}. 2012.
 	    \item [Meissner10] Meissner, D. and Dietmayer, K. \textbf{Simulation and calibration of infrastructure based laser scanner networks at intersections}.\textit{2010 IEEE Intelligent Vehicles Symposium, 670–675}. 2010.
 	    \item [Meissner12] Meissner, D., Reuter, S., and Dietmayer, K. \textbf{Real-time detection and tracking of pedestrians at intersections using a network of laserscanners}. \textit{2012 IEEE Intelligent Vehicles Symposium, 630–635}. 2012.
@@ -778,10 +794,14 @@
 %	\end{itemize}	
 %	}
 %}
+% BIBENTRY TEMPLATE
+%\item [Goldhammer12] Goldhammer, M. et al, \textbf{Cooperative multi sensor network for traffic safety applications at intersections}. \textit{2012 15th International IEEE Conference on Intelligent Transportation Systems (pp. 1178–1183)}. 2012.
 
 
 
-%
+Khaleghi, B., Khamis, A., Karray, F. O., & Razavi, S. N. (2013). Multisensor data fusion: A review of the state-of-the-art. Information Fusion, 14(1), 28–44. doi:10.1016/j.inffus.2011.08.001
+Luo, R. C. (2002). Multisensor fusion and integration: approaches, applications, and future research directions. IEEE Sensors Journal, 2(2), 107–119. doi:10.1109/JSEN.2002.1000251
+Luo, R. C., Chang, C. C., & Lai, C. C. (2011). Multisensor Fusion and Integration: Theories, Applications, and its Perspectives. IEEE Sensors Journal, 11(12), 3122–3138. doi:10.1109/JSEN.2011.2166383
 %
 %
 %
