--- a/slides.tex
+++ b/slides.tex
@@ -356,6 +356,30 @@
 \frame{}
 \subsubsection{Data Fusion}
 \frame{}
+
+\subsection{Clustering}
+\frame
+{
+	\frametitle{Clustering}
+	\begin{figure}
+		\includegraphics[scale=0.45]{fig/ulcs1.png}		
+	\end{figure}
+}
+\frame
+{
+	\frametitle{Clustering}
+	\begin{figure}
+		\includegraphics[scale=0.45]{fig/ulcs2.png}		
+	\end{figure}
+}
+\frame
+{
+	\frametitle{Clustering}
+	\begin{figure}
+		\includegraphics[scale=0.45]{fig/ulcs3.png}		
+	\end{figure}
+}
+
 %\frame{
 %	\frametitle{Conditions}
 %	\begin{itemize}
@@ -799,9 +823,9 @@ Lecture Notes in Computer Science Volume 4761 (pp. 547–559)}. 2007.
 
 
 
-Khaleghi, B., Khamis, A., Karray, F. O., & Razavi, S. N. (2013). Multisensor data fusion: A review of the state-of-the-art. Information Fusion, 14(1), 28–44. doi:10.1016/j.inffus.2011.08.001
-Luo, R. C. (2002). Multisensor fusion and integration: approaches, applications, and future research directions. IEEE Sensors Journal, 2(2), 107–119. doi:10.1109/JSEN.2002.1000251
-Luo, R. C., Chang, C. C., & Lai, C. C. (2011). Multisensor Fusion and Integration: Theories, Applications, and its Perspectives. IEEE Sensors Journal, 11(12), 3122–3138. doi:10.1109/JSEN.2011.2166383
+%Khaleghi, B., Khamis, A., Karray, F. O., & Razavi, S. N. (2013). Multisensor data fusion: A review of the state-of-the-art. Information Fusion, 14(1), 28–44. doi:10.1016/j.inffus.2011.08.001
+%Luo, R. C. (2002). Multisensor fusion and integration: approaches, applications, and future research directions. IEEE Sensors Journal, 2(2), 107–119. doi:10.1109/JSEN.2002.1000251
+%Luo, R. C., Chang, C. C., & Lai, C. C. (2011). Multisensor Fusion and Integration: Theories, Applications, and its Perspectives. IEEE Sensors Journal, 11(12), 3122–3138. doi:10.1109/JSEN.2011.2166383
 %
 %
 %
