Added block diagrams

--- a/slides.tex
+++ b/slides.tex
@@ -2,7 +2,8 @@
 
 \usepackage[utf8]{inputenc}
 \usepackage{enumitem}
-\usepackage[labelformat=empty]{caption}
+\usepackage[font=small,labelfont=bf,labelformat=empty]{caption}
+
 
 %\usetheme{Berlin}
 %\usetheme{Antibes}
@@ -96,134 +97,134 @@
 		\item Incident detection, Intersection Management
 	\end{itemize}
 }
-\subsection{Objectives}
+%\subsection{Objectives}
+%
+%\frame
+%{
+%	\frametitle{Objectives}
+%	\begin{itemize}
+%	\item Objectives
+%		\begin{itemize}
+%			\item Review of the state-of-the-art of sensor fusion in IMS
+%			\item Techniques review and architecture design 
+%			\item Laser and video sensor fusion implementation
+%			\item Incident detection and warnings advertisement
+%			\item Testing and Comparison
+%		\end{itemize}
+%	\item<2-> For the course project:
+%		\begin{itemize}
+%			\item<2-> In \textcolor{blue}{blue} are the tasks proposed for this course project.
+%			\item<2-> In \textcolor{green}{green} are the tasks proposed as plus if time allows it.
+%		\end{itemize}
+%	\end{itemize}
+%}
+%\frame
+%{
+%	\frametitle{Objectives}
+%	\begin{itemize}
+%	\item Objectives
+%		\begin{itemize}
+%			\item \textcolor{blue}{Review of the state-of-the-art of Sensor Fusion in IMS}
+%			\item \textcolor{blue}{Techniques review} \textcolor{green}{and architecture design}
+%			\item \textcolor{blue}{Laser} \textcolor{green}{and video sensor fusion} \textcolor{blue}{implementation}
+%			\item Incident detection and warnings advertisement
+%			\item \textcolor{blue}{Testing and Comparison}
+%		\end{itemize}
+%	\item For the course project:
+%		\begin{itemize}
+%			\item In \textcolor{blue}{blue} are the tasks proposed for this course project.
+%			\item In \textcolor{green}{green} are the tasks proposed as plus if time allows it.
+%		\end{itemize}
+%	\end{itemize}
+%}
+%
+%\subsubsection{Review}
+%\frame
+%{
+%	\frametitle{Objectives}
+%	Objective 1. Review of the state-of-the-art of Sensor Fusion in IMS
+%	\begin{itemize}
+%		\item Intelligent Transportation Systems (ITS)
+%		\item Intersection Management Systems (IMS)
+%		\item Multisensor Data Fusion (MDF)
+%		\item Laser-Video Data Fusion
+%		\item IMS + LV-DF
+%	\end{itemize}
+%}
+%
+%\frame
+%{
+%	\frametitle{Objectives}
+%	Objective 1. Review of the state-of-the-art of Sensor Fusion in IMS
+%	\begin{itemize}
+%		\item Intelligent Transportation Systems (ITS)
+%		\item Intersection Management Systems (IMS)
+%		\item \textcolor{blue}{\emph{Multisensor Data Fusion (MDF)}}
+%		\item \textcolor{blue}{\emph{Laser-Video Data Fusion}}
+%		\item \textcolor{blue}{\emph{IMS + LV-DF}}
+%	\end{itemize}
+%}
+%\subsubsection{Techniques and Design}
+%\frame
+%{
+%	\frametitle{Objectives}
+%	Objective 2. Techniques review and architecture design
+%	\begin{itemize}
+%		\item Feature Extraction (Laser/Video)
+%		\item Pattern Recognition (Laser/Video)
+%		\item Classification (Laser/Video)
+%		\item Decision (Laser/Video)
+%		\item Low-Level, Mid-Level and High-Level Fusion
+%	\end{itemize}
+%}
+%
+%\frame
+%{
+%	\frametitle{Objectives}
+%	Objective 2. Techniques review and architecture design
+%	\begin{itemize}		
+%		\item \textcolor{blue}{\emph{Feature Extraction (Laser}}\textcolor{green}{\emph{/Video)}}
+%		\item \textcolor{blue}{\emph{Pattern Recognition (Laser}}\textcolor{green}{\emph{/Video)}}
+%		\item \textcolor{green}{\emph{Classification (Laser/Video)}}
+%		\item Decision (Laser/Video)
+%		\item \textcolor{blue}{\emph{Low-Level, Mid-Level and High-Level Fusion}}
+%	\end{itemize}
+%}
+%
+%\subsubsection{Implementation}
+%\frame
+%{
+%	\frametitle{Objectives}
+%	Objective 3. Laser and video sensor fusion implementation
+%	\begin{itemize}	
+%		\item Implement choosen techniques for laser and video data
+%		\item Integrate developed modules to the designed architecture for sensor fusion
+%	\end{itemize}
+%}
+%
+%\frame
+%{
+%	\frametitle{Objectives}
+%	Objective 3. Laser and video sensor fusion implementation
+%	\begin{itemize}	
+%		\item \textcolor{blue}{\emph{Implement choosen techniques for laser}}\textcolor{green}{\emph{ and video data}}
+%		\item \textcolor{green}{\emph{Integrate developed modules to the designed architecture for sensor fusion}}	
+%	\end{itemize}
+%}
+%
+%\subsubsection{Decision and Testing}
+%\frame
+%{
+%	\begin{itemize}	
+%		\item Objective 4. Incident detection and warnings advertisement
+%		\item Objective 5. \textcolor{blue}{\emph{Testing and Comparison}}
+%	\end{itemize}
+%	
+%	\emph{Objective 4 is out of the scope of this class.}
+%}
 
-\frame
-{
-	\frametitle{Objectives}
-	\begin{itemize}
-	\item Objectives
-		\begin{itemize}
-			\item Review of the state-of-the-art of sensor fusion in IMS
-			\item Techniques review and architecture design 
-			\item Laser and video sensor fusion implementation
-			\item Incident detection and warnings advertisement
-			\item Testing and Comparison
-		\end{itemize}
-	\item<2-> For the course project:
-		\begin{itemize}
-			\item<2-> In \textcolor{blue}{blue} are the tasks proposed for this course project.
-			\item<2-> In \textcolor{green}{green} are the tasks proposed as plus if time allows it.
-		\end{itemize}
-	\end{itemize}
-}
-\frame
-{
-	\frametitle{Objectives}
-	\begin{itemize}
-	\item Objectives
-		\begin{itemize}
-			\item \textcolor{blue}{Review of the state-of-the-art of Sensor Fusion in IMS}
-			\item \textcolor{blue}{Techniques review} \textcolor{green}{and architecture design}
-			\item \textcolor{blue}{Laser} \textcolor{green}{and video sensor fusion} \textcolor{blue}{implementation}
-			\item Incident detection and warnings advertisement
-			\item \textcolor{blue}{Testing and Comparison}
-		\end{itemize}
-	\item For the course project:
-		\begin{itemize}
-			\item In \textcolor{blue}{blue} are the tasks proposed for this course project.
-			\item In \textcolor{green}{green} are the tasks proposed as plus if time allows it.
-		\end{itemize}
-	\end{itemize}
-}
-
-\subsubsection{Review}
-\frame
-{
-	\frametitle{Objectives}
-	Objective 1. Review of the state-of-the-art of Sensor Fusion in IMS
-	\begin{itemize}
-		\item Intelligent Transportation Systems (ITS)
-		\item Intersection Management Systems (IMS)
-		\item Multisensor Data Fusion (MDF)
-		\item Laser-Video Data Fusion
-		\item IMS + LV-DF
-	\end{itemize}
-}
-
-\frame
-{
-	\frametitle{Objectives}
-	Objective 1. Review of the state-of-the-art of Sensor Fusion in IMS
-	\begin{itemize}
-		\item Intelligent Transportation Systems (ITS)
-		\item Intersection Management Systems (IMS)
-		\item \textcolor{blue}{\emph{Multisensor Data Fusion (MDF)}}
-		\item \textcolor{blue}{\emph{Laser-Video Data Fusion}}
-		\item \textcolor{blue}{\emph{IMS + LV-DF}}
-	\end{itemize}
-}
-\subsubsection{Techniques and Design}
-\frame
-{
-	\frametitle{Objectives}
-	Objective 2. Techniques review and architecture design
-	\begin{itemize}
-		\item Feature Extraction (Laser/Video)
-		\item Pattern Recognition (Laser/Video)
-		\item Classification (Laser/Video)
-		\item Decision (Laser/Video)
-		\item Low-Level, Mid-Level and High-Level Fusion
-	\end{itemize}
-}
-
-\frame
-{
-	\frametitle{Objectives}
-	Objective 2. Techniques review and architecture design
-	\begin{itemize}		
-		\item \textcolor{blue}{\emph{Feature Extraction (Laser}}\textcolor{green}{\emph{/Video)}}
-		\item \textcolor{blue}{\emph{Pattern Recognition (Laser}}\textcolor{green}{\emph{/Video)}}
-		\item \textcolor{green}{\emph{Classification (Laser/Video)}}
-		\item Decision (Laser/Video)
-		\item \textcolor{blue}{\emph{Low-Level, Mid-Level and High-Level Fusion}}
-	\end{itemize}
-}
-
-\subsubsection{Implementation}
-\frame
-{
-	\frametitle{Objectives}
-	Objective 3. Laser and video sensor fusion implementation
-	\begin{itemize}	
-		\item Implement choosen techniques for laser and video data
-		\item Integrate developed modules to the designed architecture for sensor fusion
-	\end{itemize}
-}
-
-\frame
-{
-	\frametitle{Objectives}
-	Objective 3. Laser and video sensor fusion implementation
-	\begin{itemize}	
-		\item \textcolor{blue}{\emph{Implement choosen techniques for laser}}\textcolor{green}{\emph{ and video data}}
-		\item \textcolor{green}{\emph{Integrate developed modules to the designed architecture for sensor fusion}}	
-	\end{itemize}
-}
-
-\subsubsection{Decision and Testing}
-\frame
-{
-	\begin{itemize}	
-		\item Objective 4. Incident detection and warnings advertisement
-		\item Objective 5. \textcolor{blue}{\emph{Testing and Comparison}}
-	\end{itemize}
-	
-	\emph{Objective 4 is out of the scope of this class.}
-}
-
-\section{Aims and Conditions}
-\subsection{Aims}
+\subsection{Aims and Conditions}
+\subsubsection*{Aims}
 \frame{
 	\frametitle{Main Objective}
 	To develop a feature extraction and pattern recognition laser-based module for an intersection management system 
@@ -231,40 +232,39 @@
 \frame{
 	\frametitle{Sub-objectives}
 	\begin{itemize}
-		\item<1-> Review of laser-based feature extraction and pattern recognition in ITS and IMS
-		\item<2-> Evaluate pros and cons of the reviewed methods
-		\item<3-> Implement at least one method
-		\item<4-> Evaluate implemented module and compare it with similar developments
+		\item<1->[-] Review of laser-based feature extraction and pattern recognition in ITS and IMS
+		\item<2->[-] Evaluate pros and cons of the reviewed methods
+		\item<3->[-] Implement at least one method
+		\item<4->[-] Evaluate implemented module and compare it with similar developments
 	\end{itemize}
 }
-\subsection{Conditions}
+\subsubsection*{Conditions}
 \frame{
 	\frametitle{Conditions}
 	\begin{itemize}
-		\item<1-> The information source will be a dataset.
+		\item<1->[-] The information source will be a dataset.
+		\item<2->[-] \textcolor{purple}{[New!] Just one laser}.
 	\end{itemize}
-
 }
 
-
-\section{Similar Projects}
+\section*{Similar Projects}
 \frame
 {
 	\frametitle{Research Groups}
 	\begin{itemize}
-		\item PKU Omni Smart Sensing (POSS) Research group at Peking University (POSS-i project)
-		\item Institute of Measurement, Control and Microtechnology at Ulm University (Ko-PER program)
+		\item[-] PKU Omni Smart Sensing (POSS) Research group at Peking University (POSS-i project)
+		\item[-] Institute of Measurement, Control and Microtechnology at Ulm University (Ko-PER program)
 		%Forschungsinitiative Ko-FAS from Bundesministerium für wirtschaft und Technologie (Germany)
 	\end{itemize}
 }
 
-\subsection{POSS-i}
+\subsection*{POSS-i}
 \frame
 {
 	\frametitle{PKU Omni Smart Sensing (POSS)}
 	\begin{itemize}
-		\item POSS is leaded by Prof. Huijing Zhao, Ph.D.
-		\item Focus on perception technologies using an intelligent vehicle, a network sensing system or a collaboration of them
+		\item[-] POSS is leaded by Prof. Huijing Zhao, Ph.D.
+		\item[-] Focus on perception technologies using an intelligent vehicle, a network sensing system or a collaboration of them
 	\end{itemize}
 }
 \frame
@@ -277,15 +277,15 @@
 }
 
 
-\subsection{Ko-PER}
+\subsection*{Ko-PER}
 \frame
 {
 	\frametitle{Ko-PER}
 	\begin{itemize}
-		\item Ko-PER from Cooperative Perception
-		\item Included in Forschungsinitiative Ko-FAS from Bundesministerium für wirtschaft und Technologie (Germany)
-		\item Cooperative and collaborative sensors system for perception and preventive road safety.
-		\item Daniel Meissen from Ulm University as leader researcher.
+		\item[-] Ko-PER from Cooperative Perception
+		\item[-] Included in Forschungsinitiative Ko-FAS from Bundesministerium für wirtschaft und Technologie (Germany)
+		\item[-] Cooperative and collaborative sensors system for perception and preventive road safety.
+		\item[-] Daniel Meissen from Ulm University as leader researcher.
 	\end{itemize}
 }
 \frame
@@ -297,7 +297,7 @@
 	\end{figure}
 }
 
-\subsection{Methods And Techniques}
+\subsection*{Methods And Techniques}
 \frame
 {
 	\frametitle{Applications, Methods and Techniques}
@@ -340,22 +340,140 @@
 	\frametitle{Typical System for one source of data}	
 	\begin{figure}
 		\includegraphics[scale=0.4]{fig/TypAppSys2.png}
-		\caption{Typical Application or System Data Flow}
+		\caption{Single source system block diagram}
 	\end{figure}
 }
 \frame{
 	\frametitle{Multisensor Data System}	
 	\begin{figure}
 		\includegraphics[scale=0.3]{fig/TypApp2.png}
-		\caption{Typical Application or System Data Flow}
+		\caption{Multisensor system block diagram}
 	\end{figure}
 }
-\subsubsection{Video Processing}
-\frame{}
-\subsubsection{Laser Processing}
-\frame{}
-\subsubsection{Data Fusion}
-\frame{}
+\frame{
+	\frametitle{How to fuse information?}	
+	\begin{figure}
+		\includegraphics[scale=0.3]{fig/TypApp2q.png}
+		\caption{Multisensor system block diagram}
+	\end{figure}
+}
+\frame{
+	\frametitle{Fusion Levels}	
+	\begin{figure}
+		\includegraphics[scale=0.3]{fig/fusionLevels.png}
+		\caption{Fusion Levels [Luo11]}
+	\end{figure}
+}
+\frame{
+	\frametitle{Fusion Algorithms}	
+	\begin{figure}
+		\includegraphics[scale=0.3]{fig/fusionAlg.png}
+		\caption{Classification of Fusion Algorithms [Luo11]}
+	\end{figure}
+}
+\subsection{Video Processing}
+\frame{
+	\frametitle{Video-Based System Block Diagram}
+	\begin{figure}
+		\includegraphics[scale=0.4]{fig/proposal1.png}
+	\end{figure}
+}
+\frame{
+	\frametitle{Video-Based System Block Diagram}
+	\begin{figure}
+		\includegraphics[scale=0.4]{fig/proposal1tech.png}
+	\end{figure}
+}
+\subsection{Laser Processing}
+\frame{
+	\frametitle{Laser-Based System Block Diagram}
+	\begin{figure}
+		\includegraphics[scale=0.4]{fig/proposalLaser.png}
+	\end{figure}
+}
+\frame{
+	\frametitle{Laser-Based System Block Diagram}
+	\begin{figure}
+		\includegraphics[scale=0.4]{fig/proposalLaserTech.png}
+		\caption{Based on [Zhao06]}
+	\end{figure}
+}
+\section{Implementation}
+\subsection{Background Extraction}
+\frame{
+	\frametitle{Background Extraction}
+	\begin{itemize}
+		\item[-] Histogram-based background extraction
+		\item[-] Done for each angle
+		\item[-] When a pick value is detected, tells that an object is detected
+	\end{itemize}
+}
+
+\subsection{Object Classification}
+\frame{
+	\frametitle{Classification}
+	\begin{itemize}
+		\item[-] Classes are proposed based on distribution of points in clusters
+		\item[-] Karhunen-Loeve Transform to detect number of axis
+		\begin{figure}
+			\includegraphics[scale=0.4]{fig/objClasses.png}
+		\end{figure}
+	\end{itemize}
+}
+\frame{
+	\frametitle{Markov States}
+		\begin{figure}
+			\includegraphics[scale=0.4]{fig/mstates.png}
+			\caption{There are 8 patterns that can happen}
+		\end{figure}
+		\begin{figure}
+			\includegraphics[scale=0.2]{fig/mtrans.png}
+			\caption{Possible transitions}
+		\end{figure}
+}
+
+\subsection{Feature Extraction}
+\frame{
+	\frametitle{Features}
+	\begin{itemize}
+		\item[-] Normal Vectors
+		\item[-] Number of axis
+		\item[-] Axis lengths		
+		\item[-] Directional vector, Motion speed
+		\item[-] Markov States		
+	\end{itemize}
+}
+\subsection{Implementation}
+\frame{
+	\frametitle{Dataset}
+	\begin{figure}
+		\includegraphics[scale=0.35]{fig/datasetview.png}
+		\caption{Capture of application [Zhao06]}
+	\end{figure}
+}
+
+\subsection{Next Steps}
+\frame{
+	\frametitle{Next Steps}
+	\begin{itemize}
+		\item[-] Implement Dataset handler
+		\item[-] Implement Clustering and KL Transform to classify in 0, 1 or 2 axis object
+		\item[-] Get features from objects and obtain trajectory
+	\end{itemize}
+}
+
+%\frame{
+%	\frametitle{Definition}
+%	\begin{columns}[c] % the "c" option specifies center vertical alignment
+%    \column{.5\textwidth} % column designated by a command
+%    		\begin{figure}
+%		\includegraphics[scale=0.2]{fig/objClasses.png}
+%	\end{figure}
+%    \column{.5\textwidth}
+%     Contents split \\ into two lines
+%    \end{columns}
+%}
+
 %\frame{
 %	\frametitle{Conditions}
 %	\begin{itemize}
@@ -736,11 +854,20 @@
 Lecture Notes in Computer Science Volume 4761 (pp. 547–559)}. 2007.
 		\item [Esteban12] Esteban, J. et al, \textbf{A Review of data fusion models and architectures: towards 	engineering guidelines}. \textit{Neural Computing and Applications, 14(4),(pp. 273–281)}. 2012.
 		\item [Goldhammer12] Goldhammer, M. et al, \textbf{Cooperative multi sensor network for traffic safety applications at intersections}. \textit{2012 15th International IEEE Conference on Intelligent Transportation Systems (pp. 1178–1183)}. 2012.
+		\item [Khaleghi11] Khaleghi, B. et al, \textbf{Multisensor data fusion: A review of the state-of-the-art}. \textit{Information Fusion, 14(1) (pp. 28–44)}. 2011.
+	\end{itemize}
+	}
+}
+
+\frame
+{
+	\frametitle{References}
+	\footnotesize{	
+	\begin{itemize}[leftmargin=.6in]
+		\item [Luo02] Luo, R. C. \textbf{Multisensor fusion and integration: approaches, applications, and future research directions}. \textit{IEEE Sensors Journal, 2(2), 107–119}. 2002
+		\item [Luo11] Luo, R. C. et al. \textbf{Multisensor Fusion and Integration: Theories, Applications, and its Perspectives}. \textit{IEEE Sensors Journal, 11(12), 3122–3138}. 2011.
 	    \item [Meissner10] Meissner, D. and Dietmayer, K. \textbf{Simulation and calibration of infrastructure based laser scanner networks at intersections}.\textit{2010 IEEE Intelligent Vehicles Symposium, 670–675}. 2010.
 	    \item [Meissner12] Meissner, D., Reuter, S., and Dietmayer, K. \textbf{Real-time detection and tracking of pedestrians at intersections using a network of laserscanners}. \textit{2012 IEEE Intelligent Vehicles Symposium, 630–635}. 2012.
-	    \item [Meissner13a] Meissner, D., Reuter, S., and Dietmayer, K. \textbf{Road user tracking at intersections using a multiple-model PHD filter}. \textit{2013 IEEE Intelligent Vehicles Symposium (IV), (Iv), 377–382}. 2013.
-		
-		
 	\end{itemize}
 	}
 }
@@ -750,10 +877,10 @@ Lecture Notes in Computer Science Volume 4761 (pp. 547–559)}. 2007.
 	\frametitle{References}
 		\footnotesize{
 	\begin{itemize}[leftmargin=.6in]
+		\item [Meissner13a] Meissner, D., Reuter, S., and Dietmayer, K. \textbf{Road user tracking at intersections using a multiple-model PHD filter}. \textit{2013 IEEE Intelligent Vehicles Symposium (IV), (Iv), 377–382}. 2013.
 		\item [Meissner13b] Meissner, D. et al. \textbf{Road User Tracking Using a Dempster-Shafer Based Classifying Multiple-Model PHD Filter}. \textit{Information Fusion (FUSION), 2013 16th International Conference on (Vol. 32, pp. 1236–1242)} 2013.
 		\item [Meissner13c] Meissner, D., Reuter, S., and Dietmayer, K. \textbf{Combining the 2D and 3D world: a new approach for point cloud based object detection}. \textit{IET Intelligent Signal Processing Conference 2013 (ISP 2013) (pp. 4.1–4.1)}. 2013.
-		\item [Meissner14] Meissner, D. et al. \textbf{Intersection-Based Road User Tracking Using a Classifying Multiple-Model PHD Filter}.\textit{ IEEE Intelligent Transportation Systems Magazine, 6(April 2014), 21–33}.2014.
-		\item [Song08] Song, X. et al. \textbf{Bayesian fusion of laser and vision for multiple People Detection and tracking}. \textit{2008 SICE Annual Conference, 3014–3019}. 2008.		
+		\item [Meissner14] Meissner, D. et al. \textbf{Intersection-Based Road User Tracking Using a Classifying Multiple-Model PHD Filter}.\textit{ IEEE Intelligent Transportation Systems Magazine, 6(April 2014), 21–33}.2014.		
 	\end{itemize}	
 	}
 }
@@ -763,10 +890,10 @@ Lecture Notes in Computer Science Volume 4761 (pp. 547–559)}. 2007.
 	\frametitle{References}
 		\footnotesize{
 	\begin{itemize}[leftmargin=.6in]
+		\item [Song08] Song, X. et al. \textbf{Bayesian fusion of laser and vision for multiple People Detection and tracking}. \textit{2008 SICE Annual Conference, 3014–3019}. 2008.
 		\item [Song13a] Song, X. et al. \textbf{Laser-based tracking of multiple interacting pedestrians via on-line learning}. \textit{Neurocomputing, 115, 92–105}. 2013.
 		\item [Song13b] Song,X. et al. \textbf{An Online System for Multiple Interacting Targets Tracking: Fusion of Laser and Vision, Tracking and Learning}. \textit{ACM Transactions on Intelligent Systems and Technology}. 2013.
 		\item [Strigel13] Strigel, E., Meissner, D., and Dietmayer, K. \textbf{Vehicle detection and tracking at intersections by fusing multiple camera views}. \textit{2013 IEEE Intelligent Vehicles Symposium (IV) (pp. 882–887)}. 2013.
-		\item [Zhao06] Zhao, H., and Shibasaki, R. \textbf{Joint tracking and classification of moving objects at intersection using a single-row laser range scanner}. \textit{In Proceedings of the IEEE Intelligent Transportation Systems Conference (pp. 287–294)}. 2006.
 	\end{itemize}	
 	}
 }
@@ -776,6 +903,7 @@ Lecture Notes in Computer Science Volume 4761 (pp. 547–559)}. 2007.
 	\frametitle{References}
 		\footnotesize{
 	\begin{itemize}[leftmargin=.6in]
+		\item [Zhao06] Zhao, H., and Shibasaki, R. \textbf{Joint tracking and classification of moving objects at intersection using a single-row laser range scanner}. \textit{In Proceedings of the IEEE Intelligent Transportation Systems Conference (pp. 287–294)}. 2006.
 		\item [Zhao08] Zhao, H. et al.\textbf{ Monitoring an intersection using a network of laser scanners}. \textit{Proceedings of the11th International IEEE Conference on Intelligent Transportation Systems (pp. 428–433)}. 2008.
 		\item [Zhao09] Zhao, H., Cui, J., and Zha, H. \textbf{Sensing an Intersection Using a Network of Laser Scanners and Video Cameras}. \textit{IEEE Intelligent Transportation Systems Magazine, 31–37}. 2009.
 		\item [Zhao12] Zhao, H. et al. \textbf{Detection and Tracking of Moving Objects at Intersections Using a Network of Laser Scanners}. \textit{IEEE Transactions on Intelligent Transportation Systems, 13(2), 1–16}. 2012.
@@ -799,9 +927,7 @@ Lecture Notes in Computer Science Volume 4761 (pp. 547–559)}. 2007.
 
 
 
-Khaleghi, B., Khamis, A., Karray, F. O., & Razavi, S. N. (2013). Multisensor data fusion: A review of the state-of-the-art. Information Fusion, 14(1), 28–44. doi:10.1016/j.inffus.2011.08.001
-Luo, R. C. (2002). Multisensor fusion and integration: approaches, applications, and future research directions. IEEE Sensors Journal, 2(2), 107–119. doi:10.1109/JSEN.2002.1000251
-Luo, R. C., Chang, C. C., & Lai, C. C. (2011). Multisensor Fusion and Integration: Theories, Applications, and its Perspectives. IEEE Sensors Journal, 11(12), 3122–3138. doi:10.1109/JSEN.2011.2166383
+
 %
 %
 %
