--- a/slides.tex
+++ b/slides.tex
@@ -400,6 +400,16 @@
 }
 
 \section{Implementation}
+\frame{
+	\frametitle{Dataset}
+	\begin{figure}
+		\includegraphics[scale=0.35]{fig/datasetview.png}
+		\caption{Capture of dataset viewer application [Zhao06]}
+	\end{figure}
+}
+
+\subsection{Dataset}
+
 \subsection{Background Extraction}
 \frame{
 	\frametitle{Background Extraction}
@@ -445,13 +455,7 @@
 	\end{itemize}
 }
 \subsection{Implementation}
-\frame{
-	\frametitle{Dataset}
-	\begin{figure}
-		\includegraphics[scale=0.35]{fig/datasetview.png}
-		\caption{Capture of application [Zhao06]}
-	\end{figure}
-}
+
 
 \subsection{Next Steps}
 \frame{
